--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,4 +1,4 @@
-.App{
+/* .App{
     text-align: center;
 }
 .checkout{
@@ -63,4 +63,4 @@
 .paypal-button-container{
     width: fit-content;
     margin: 0 auto;
-}
+} */
