--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,73 @@
   padding: 0;
 }
 
+body{
+  background-color: rgba(102, 51, 153, 0.8);
+}
+
+h1{
+  font-size: 2em;
+  text-align: center;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.image-container {
+  width: 90%;
+  height: auto;
+  margin: 2% auto;
+  padding: 0;
+
+}
+
+.product-image{
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+  border-radius: 1rem;
+  border: 3px solid dodgerblue;
+}
+
+.checkout-container {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.checkout-container h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.checkout-container input {
+  display: block;
+  width: 50%;
+  height: 3rem;
+  margin: 0 auto;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-style : inset;
+  background-color: #f2f2f2;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.paypal-button-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
