--- a/src/App.css
+++ b/src/App.css
@@ -16,61 +16,63 @@ h1{
   padding: 0;
 }
 
-.container {
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
-  padding: 0 20px;
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.image-container {
-  width: 90%;
-  height: auto;
-  margin: 2% auto;
-  padding: 0;
-
+.image-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1em;
 }
 
 .product-image{
-  width: 100%;
+  width: 90%;
   height: auto;
-  margin: 0 auto;
-  padding: 0;
+  border: .5rem solid dodgerblue;
   border-radius: 1rem;
-  border: 3px solid dodgerblue;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
-.checkout-container {
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.checkout-container h1 {
-  font-size: 2.5rem;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
-}
-
-.checkout-container input {
-  display: block;
-  width: 50%;
-  height: 3rem;
-  margin: 0 auto;
-  padding: 0;
-  font-size: 1.5rem;
-  font-weight: bold;
-  border-style : inset;
-  background-color: #f2f2f2;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.paypal-button-container{
+.checkout-container{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 1em;
+}
+
+h1{
+  font-size: 2em;
+  text-align: center;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+input{
+  width: 50%;
+  height: 5rem;
+  border: .5rem solid dodgerblue;
+  border-radius: 1rem;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  margin-bottom: .5em;
+  font-size: 2rem;
+  text-align: center;
+}
+
+p{
+  font-size: 1.5rem;
+  text-align: center;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  margin-bottom: .5em;
+
 }
