--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,32 @@ input{
   text-align: center;
 }
 
+.amount-input{
+  width: 25%;
+}
+
+.note-input{
+  width: 75%;
+}
+
+button{
+  width: 50%;
+  height: 5rem;
+  border: .5rem solid dodgerblue;
+  border-radius: 1rem;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  margin-bottom: .5em;
+  font-size: 2rem;
+  text-align: center;
+  background-color: rebeccapurple;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: dodgerblue;
+}
+
 p{
   font-size: 1.5rem;
   text-align: center;
@@ -136,4 +162,8 @@ p{
   padding: 0;
   margin-bottom: .5em;
 
+}
+
+.domain{
+  text-decoration: underline;
 }
